# waltzing_matilda_trading

./: .dockerignore  .envrc  .gitignore  Dockerfile  Dockerfile-celery  Dockerfile-celery-beat  Makefile  README.md  config.py  docker-compose.yaml  docker.env  example.env  github.env  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  django.yml
api/: admin.py  models.py  schemas.py  tasks.py  utils.py  views.py
api/management/commands/: csv_files.py
api/migrations/: 0001_initial.py
api/tests/: __test_views.py  conftest.py  test_models.py  test_tasks.py  test_utils.py  test_views.py
k8s/: apply.sh  configmap.yaml  deployment.yaml  postgres.yaml  redis.yaml  secret.yaml  service.yaml
waltzing_matilda_trading/: asgi.py  celery.py  urls.py  wsgi.py
waltzing_matilda_trading/settings/: __init__.py  allauth.py  base.py  celery.py  cms.py  db.py  django_extensions.py  drf-docs.py  drf.py  flet.py  global_request.py  healthz.py  jwt.py  local_apps.py  logging.py  tags.py
