[tool.poetry]
name = "waltzing-matilda-trading"
version = "0.1.0"
description = "Waltzing Matilda Trading is a Django application for trading stocks. For better performance, it uses Daphne, Ninja and Celery."
readme = "README.md"
authors = ["Adam Manczuk <beret@hipisi.org.pl>"]

[tool.poetry.dependencies]
python = "^3.12"

# Django framework
Django = "^5.1"
django-extensions = "*"  # Django tweaks collection for development
werkzeug = "*"  # for Django extensions

# Django Ninja asynchronous API framework
django-ninja = "*"  # Django Ninja for asynchronous API
daphne = "*"  # ASGI server for Django Ninja
django-prometheus = "*"  # Prometheus monitoring for Django in future
django-ninja-jwt = "*"  # JWT authentication for Django Ninja

# Celery distributed task queue
celery = "*"  # Celery distributed task queue
django-celery-beat = "*"  # Celery beat for Django
redis = "*"  # Redis as default Celery broker
django-celery-results = "*"  # Celery results for Django

# Settings management
split_settings = "*"  # Split settings easy management
pydantic = "*"  # Pydantic for API schemas
pydantic-settings = "*"  # Pydantic based common configuration
beret-utils = "*"  # PathData class for easy path, files and directories management

# PostgreSQL database
psycopg2 = "*"

[tool.poetry.group.dev.dependencies]

# Testing
pytest = "*"
pytest-cov = "*"  # Coverage for pytest
pytest-django = "*"
pytest-asyncio = "*"
pytest-celery = "*"
httpx = "*"

# Linters
pep8 = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
