[tool.poetry]
name = "waltzing-matilda-trading"
version = "0.1.0"
description = "Waltzing Matilda Trading is a Django application for trading stocks. For better performance, it uses Daphne, Ninja and Celery."
readme = "README.md"
authors = ["Adam Manczuk <beret@hipisi.org.pl>"]

[tool.poetry.dependencies]
python = "^3.12"

# Django framework
Django = "^5.1"
django-extensions = "*"  # Django tweaks collection for development
werkzeug = "*"  # for Django extensions

## Django REST framework
#djangorestframework = "*" # Django REST framework
#drf-spectacular = "*" # OpenAPI 3 schema generator for Django REST framework

# Django Ninja asynchronous API framework
django-ninja = "*"  # Django Ninja for asynchronous API
daphne = "*"  # ASGI server for Django Ninja
django-prometheus = "*"  # Prometheus monitoring for Django in future
django-ninja-jwt = "*"  # JWT authentication for Django Ninja

# Celery distributed task queue
celery = "*"  # Celery distributed task queue
django-celery-beat = "*"  # Celery beat for Django
redis = "*"  # Redis as default Celery broker
django-celery-results = "*"  # Celery results for Django

# Settings management
split_settings = "*"  # Split settings easy management
pydantic = "*"  # Pydantic for API schemas
pydantic-settings = "*"  # Pydantic based common configuration
beret-utils = "*"  # PathData class for easy path, files and directories management

# PostgreSQL database
psycopg2 = "*"

## Django CMS
#djangocms-installer = "*"  # Django CMS installer
#djangocms-blog = "*"  # Django CMS blog
#djangocms-comments = "*"  # Django CMS comments
#djangocms-file = "*"  # File plugin for Django CMS
#djangocms-flash = "*"  # Flash plugin for Django CMS
#djangocms-inherit = "*"  # Inherit plugin for Django CMS
#djangocms-link = "*"  # Link plugin for Django CMS
#djangocms-picture = "*"  # Picture plugin for Django CMS
#djangocms-googlemap = "*"  # Google Maps plugin for Django CMS
#djangocms-snippet = "*"  # Snippet plugin for Django CMS
#djangocms-style = "*"  # Style plugin for Django CMS
#djangocms-teaser = "*"  # Teaser plugin for Django CMS
#djangocms-text-ckeditor = "*" # Text CKEditor plugin for Django CMS
#djangocms-video = "*"  # Video plugin for Django CMS
#djangocms-column = "*"  # Column plugin for Django CMS
#djangocms-bootstrap4 = "*"  # Bootstrap 4 plugin for Django CMS
#djangocms-attributes-field = "*"  # Attributes field plugin for Django CMS
#djangocms-accordion = "*"  # Accordion plugin for Django CMS
#djangocms-redirect = "*"  # Redirect plugin for Django CMS
#djangocms-picture = "*"  # Picture plugin for Django CMS
#djangocms-googlemap = "*"  # Google Maps plugin for Django CMS
#djangocms-snippet = "*"  # Snippet plugin for Django CMS
#djangocms-style = "*"  # Style plugin for Django CMS
#djangocms-teaser = "*"  # Teaser plugin
#django-cms = "*" # Django CMS

# Testing
pytest = "*"
pytest-cov = "*"  # Coverage for pytest
pytest-django = "*"
pytest-asyncio = "*"
pytest-celery = "*"
httpx = "*"

# Linters
pep8 = "*"
black = "*"



[tool.poetry.group.dev.dependencies]

# Testing
pytest = "*"
pytest-cov = "*"  # Coverage for pytest
pytest-django = "*"
pytest-asyncio = "*"
pytest-celery = "*"
httpx = "*"

# Linters
pep8 = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
